add --amd explanation to README